--- a/best-laptops-for-students.html
+++ b/best-laptops-for-students.html
@@ -1,4 +1,5 @@
-<div class="guide-container">
+<!-- ================= LAPTOP BUYING GUIDE ================= -->
+<div class="guide-wrapper">
 
   <h1>Best Laptops for Students</h1>
 
@@ -7,19 +8,20 @@
   </p>
 
   <p>
-    Choosing the right laptop as a student can make a huge difference in daily productivity.
-    Whether you’re attending online classes, writing assignments, or learning to code,
-    you need a laptop that’s reliable, fast, and affordable.
+    Choosing the right laptop as a student can significantly impact productivity.
+    From online classes and research to assignments and coding, a reliable laptop
+    makes everyday work smoother.
   </p>
 
   <p>
-    This guide covers the best laptops for students in the United States,
-    based on real-world performance, battery life, portability, and long-term value —
-    not just specs on paper.
+    This guide focuses on the best laptops for students in the United States,
+    selected based on real-world performance, battery life, portability,
+    and long-term value — not marketing hype.
   </p>
 
   <div style="background:#f1f5ff;border-left:4px solid #2563eb;padding:14px 16px;margin:24px 0;border-radius:8px;font-size:14px;">
-    💡 <strong>Quick tip:</strong> For most students, 8–16GB RAM and an SSD matter more than having the latest processor.
+    💡 <strong>Quick tip:</strong> For most students, 8–16GB RAM and SSD storage
+    matter more than having the latest processor.
   </div>
 
   <h2>Top Picks at a Glance</h2>
@@ -28,13 +30,13 @@
     <span class="guide-badge">Best Overall</span>
     <h3>MacBook Air (M-Series)</h3>
     <p>
-      The MacBook Air delivers outstanding performance, all-day battery life,
-      and a lightweight design — perfect for students who want a laptop that lasts for years.
+      Excellent performance, long battery life, and a lightweight design make
+      the MacBook Air a top choice for students.
     </p>
     <ul>
-      <li>✔ Excellent performance for study & creative work</li>
+      <li>✔ Fast and efficient performance</li>
       <li>✔ All-day battery life</li>
-      <li>✔ Silent, lightweight design</li>
+      <li>✔ Lightweight and silent</li>
     </ul>
     <a href="#" class="start-btn">Check price on Amazon</a>
   </div>
@@ -43,13 +45,13 @@
     <span class="guide-badge">Best Value</span>
     <h3>Dell Inspiron / HP Pavilion</h3>
     <p>
-      These laptops offer the best balance between price and performance,
-      making them ideal for everyday student use.
+      A balanced option offering solid performance and reliability at a
+      student-friendly price.
     </p>
     <ul>
-      <li>✔ Strong multitasking performance</li>
+      <li>✔ Smooth multitasking</li>
       <li>✔ Comfortable keyboards</li>
-      <li>✔ Widely available support in the USA</li>
+      <li>✔ Widely supported in the USA</li>
     </ul>
     <a href="#" class="start-btn">Check price on Amazon</a>
   </div>
@@ -58,40 +60,34 @@
     <span class="guide-badge">Best Budget</span>
     <h3>Acer Aspire / Lenovo IdeaPad</h3>
     <p>
-      If you’re on a tight budget, these laptops provide dependable performance
-      for assignments, browsing, and streaming.
+      Affordable laptops suitable for assignments, browsing, and media consumption.
     </p>
     <ul>
-      <li>✔ Affordable pricing</li>
-      <li>✔ Solid battery life</li>
-      <li>✔ Lightweight and portable</li>
+      <li>✔ Budget-friendly pricing</li>
+      <li>✔ Good battery life</li>
+      <li>✔ Lightweight design</li>
     </ul>
     <a href="#" class="start-btn">Check price on Amazon</a>
   </div>
 
   <h2>How to Choose the Right Laptop</h2>
 
-  <p>
-    When picking a laptop for school, focus on what you’ll actually use every day —
-    not marketing hype.
-  </p>
-
   <ul>
-    <li><strong>Performance:</strong> 8–16GB RAM and SSD storage for smooth multitasking</li>
-    <li><strong>Battery life:</strong> Aim for at least 8 hours per charge</li>
-    <li><strong>Portability:</strong> Lightweight laptops are easier to carry all day</li>
-    <li><strong>Durability:</strong> A solid build helps the laptop last through years of use</li>
+    <li><strong>RAM & Storage:</strong> 8–16GB RAM with SSD is ideal</li>
+    <li><strong>Battery life:</strong> Aim for at least 8 hours</li>
+    <li><strong>Portability:</strong> Lightweight laptops are easier to carry</li>
+    <li><strong>Durability:</strong> Solid build quality matters</li>
   </ul>
 
   <p>
-    For most students, expensive gaming laptops or premium features aren’t necessary.
-    A reliable mid-range laptop will comfortably handle coursework, research,
-    and entertainment.
+    For most students, expensive gaming laptops aren’t necessary.
+    A reliable mid-range laptop will handle coursework and daily tasks comfortably.
   </p>
 
   <p style="font-size:13px;color:#666;margin-top:30px;">
-    Disclosure: Some links on this page may be affiliate links.
-    This helps support our site at no extra cost to you.
+    Disclosure: Some links on this page may be affiliate links. This helps support
+    our site at no extra cost to you.
   </p>
 
 </div>
+<!-- ====================================================== -->
