--- a/best-laptops-for-students.html
+++ b/best-laptops-for-students.html
@@ -1,93 +1,204 @@
-<!-- ================= LAPTOP BUYING GUIDE ================= -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Best Laptops for Students (2026) – USA Buying Guide</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Best laptops for students in the USA. Honest buying guide with top picks based on performance, battery life, and value.">
+
+<style>
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: #f8f9fb;
+  color: #222;
+}
+
+.guide-wrapper {
+  max-width: 900px;
+  margin: auto;
+  padding: 40px 20px;
+}
+
+h1 {
+  font-size: 34px;
+  margin-bottom: 8px;
+}
+
+.meta {
+  color: #666;
+  font-size: 14px;
+  margin-bottom: 22px;
+}
+
+p {
+  font-size: 16px;
+  line-height: 1.6;
+  color: #444;
+  margin-bottom: 18px;
+}
+
+.tip-box {
+  background: #f1f5ff;
+  border-left: 4px solid #2563eb;
+  padding: 14px 16px;
+  border-radius: 8px;
+  font-size: 14px;
+  margin: 26px 0;
+}
+
+h2 {
+  font-size: 26px;
+  margin: 40px 0 20px;
+}
+
+.guide-card {
+  background: #fff;
+  padding: 20px;
+  border-radius: 14px;
+  box-shadow: 0 6px 18px rgba(0,0,0,0.06);
+  margin-bottom: 22px;
+}
+
+.guide-badge {
+  display: inline-block;
+  font-size: 11px;
+  font-weight: 600;
+  color: #2563eb;
+  background: #e8f0ff;
+  padding: 4px 8px;
+  border-radius: 6px;
+  margin-bottom: 8px;
+}
+
+.guide-card h3 {
+  font-size: 18px;
+  margin: 8px 0 10px;
+}
+
+.guide-card ul {
+  padding-left: 18px;
+  margin: 12px 0 18px;
+}
+
+.guide-card li {
+  font-size: 14px;
+  margin-bottom: 6px;
+}
+
+.start-btn {
+  display: inline-block;
+  padding: 12px 22px;
+  background: #2563eb;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 8px;
+  font-weight: 600;
+  font-size: 14px;
+}
+
+.start-btn:hover {
+  background: #1e4fd8;
+}
+
+.disclosure {
+  font-size: 13px;
+  color: #666;
+  margin-top: 40px;
+}
+</style>
+</head>
+
+<body>
+
 <div class="guide-wrapper">
 
-  <h1>Best Laptops for Students</h1>
+<h1>Best Laptops for Students</h1>
+<div class="meta">Updated for 2026 · USA Buying Guide</div>
 
-  <p style="color:#666;font-size:14px;margin-bottom:14px;">
-    Updated for 2026 · USA Buying Guide
-  </p>
+<p>
+Choosing the right laptop as a student can make a huge difference in productivity.
+From online classes and research to assignments and coding, a reliable laptop keeps everything running smoothly.
+</p>
 
+<p>
+This guide covers the best laptops for students in the United States,
+based on real-world performance, battery life, portability, and long-term value —
+not marketing hype.
+</p>
+
+<div class="tip-box">
+💡 <strong>Quick tip:</strong> For most students, 8–16GB RAM and SSD storage matter more than having the latest processor.
+</div>
+
+<h2>Top Picks at a Glance</h2>
+
+<div class="guide-card">
+  <span class="guide-badge">Best Overall</span>
+  <h3>MacBook Air (M-Series)</h3>
   <p>
-    Choosing the right laptop as a student can significantly impact productivity.
-    From online classes and research to assignments and coding, a reliable laptop
-    makes everyday work smoother.
+The MacBook Air offers excellent performance, long battery life, and a lightweight design —
+making it one of the most reliable laptops for students.
   </p>
-
-  <p>
-    This guide focuses on the best laptops for students in the United States,
-    selected based on real-world performance, battery life, portability,
-    and long-term value — not marketing hype.
-  </p>
-
-  <div style="background:#f1f5ff;border-left:4px solid #2563eb;padding:14px 16px;margin:24px 0;border-radius:8px;font-size:14px;">
-    💡 <strong>Quick tip:</strong> For most students, 8–16GB RAM and SSD storage
-    matter more than having the latest processor.
-  </div>
-
-  <h2>Top Picks at a Glance</h2>
-
-  <div class="guide-card">
-    <span class="guide-badge">Best Overall</span>
-    <h3>MacBook Air (M-Series)</h3>
-    <p>
-      Excellent performance, long battery life, and a lightweight design make
-      the MacBook Air a top choice for students.
-    </p>
-    <ul>
-      <li>✔ Fast and efficient performance</li>
-      <li>✔ All-day battery life</li>
-      <li>✔ Lightweight and silent</li>
-    </ul>
-    <a href="#" class="start-btn">Check price on Amazon</a>
-  </div>
-
-  <div class="guide-card">
-    <span class="guide-badge">Best Value</span>
-    <h3>Dell Inspiron / HP Pavilion</h3>
-    <p>
-      A balanced option offering solid performance and reliability at a
-      student-friendly price.
-    </p>
-    <ul>
-      <li>✔ Smooth multitasking</li>
-      <li>✔ Comfortable keyboards</li>
-      <li>✔ Widely supported in the USA</li>
-    </ul>
-    <a href="#" class="start-btn">Check price on Amazon</a>
-  </div>
-
-  <div class="guide-card">
-    <span class="guide-badge">Best Budget</span>
-    <h3>Acer Aspire / Lenovo IdeaPad</h3>
-    <p>
-      Affordable laptops suitable for assignments, browsing, and media consumption.
-    </p>
-    <ul>
-      <li>✔ Budget-friendly pricing</li>
-      <li>✔ Good battery life</li>
-      <li>✔ Lightweight design</li>
-    </ul>
-    <a href="#" class="start-btn">Check price on Amazon</a>
-  </div>
-
-  <h2>How to Choose the Right Laptop</h2>
-
   <ul>
-    <li><strong>RAM & Storage:</strong> 8–16GB RAM with SSD is ideal</li>
-    <li><strong>Battery life:</strong> Aim for at least 8 hours</li>
-    <li><strong>Portability:</strong> Lightweight laptops are easier to carry</li>
-    <li><strong>Durability:</strong> Solid build quality matters</li>
+    <li>✔ Fast and efficient performance</li>
+    <li>✔ All-day battery life</li>
+    <li>✔ Lightweight and silent</li>
   </ul>
+  <a href="#" class="start-btn">Check price on Amazon</a>
+</div>
 
+<div class="guide-card">
+  <span class="guide-badge">Best Value</span>
+  <h3>Dell Inspiron / HP Pavilion</h3>
   <p>
-    For most students, expensive gaming laptops aren’t necessary.
-    A reliable mid-range laptop will handle coursework and daily tasks comfortably.
+These laptops provide a strong balance between price and performance,
+ideal for students who want reliable everyday computing.
   </p>
+  <ul>
+    <li>✔ Smooth multitasking</li>
+    <li>✔ Comfortable keyboards</li>
+    <li>✔ Widely supported in the USA</li>
+  </ul>
+  <a href="#" class="start-btn">Check price on Amazon</a>
+</div>
 
-  <p style="font-size:13px;color:#666;margin-top:30px;">
-    Disclosure: Some links on this page may be affiliate links. This helps support
-    our site at no extra cost to you.
+<div class="guide-card">
+  <span class="guide-badge">Best Budget</span>
+  <h3>Acer Aspire / Lenovo IdeaPad</h3>
+  <p>
+Affordable and dependable laptops suitable for assignments,
+browsing, and media consumption without overspending.
   </p>
+  <ul>
+    <li>✔ Budget-friendly pricing</li>
+    <li>✔ Solid battery life</li>
+    <li>✔ Lightweight design</li>
+  </ul>
+  <a href="#" class="start-btn">Check price on Amazon</a>
+</div>
+
+<h2>How to Choose the Right Laptop</h2>
+
+<p>When selecting a laptop for college or school, focus on these essentials:</p>
+
+<ul>
+  <li><strong>Performance:</strong> 8–16GB RAM and SSD storage ensure smooth multitasking</li>
+  <li><strong>Battery life:</strong> Aim for at least 8 hours for full school days</li>
+  <li><strong>Portability:</strong> Lightweight laptops are easier to carry</li>
+  <li><strong>Durability:</strong> Solid build quality matters for long-term use</li>
+</ul>
+
+<p>
+For most students, expensive gaming laptops aren’t necessary.
+A reliable mid-range laptop handles coursework, research, and entertainment comfortably.
+</p>
+
+<p class="disclosure">
+Disclosure: Some links on this page may be affiliate links. We may earn a commission at no extra cost to you.
+</p>
 
 </div>
-<!-- ====================================================== -->
+
+</body>
+</html>
