--- a/best-headphones-for-work.html
+++ b/best-headphones-for-work.html
@@ -1,11 +1,123 @@
-<h1>Best Headphones for Work</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Best Headphones for Work (2026) – USA Buying Guide</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="Best headphones for work in the USA. Honest buying guide covering comfort, noise cancellation, and microphone quality.">
 
-<p style="color:#666;font-size:14px;margin-bottom:14px;">
-Updated for 2026 · USA Buying Guide
-</p>
+<style>
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: #f8f9fb;
+  color: #222;
+}
+
+.guide-wrapper {
+  max-width: 900px;
+  margin: auto;
+  padding: 40px 20px;
+}
+
+h1 {
+  font-size: 34px;
+  margin-bottom: 8px;
+}
+
+.meta {
+  color: #666;
+  font-size: 14px;
+  margin-bottom: 22px;
+}
+
+p {
+  font-size: 16px;
+  line-height: 1.6;
+  color: #444;
+  margin-bottom: 18px;
+}
+
+.tip-box {
+  background: #f1f5ff;
+  border-left: 4px solid #2563eb;
+  padding: 14px 16px;
+  border-radius: 8px;
+  font-size: 14px;
+  margin: 26px 0;
+}
+
+h2 {
+  font-size: 26px;
+  margin: 40px 0 20px;
+}
+
+.guide-card {
+  background: #fff;
+  padding: 20px;
+  border-radius: 14px;
+  box-shadow: 0 6px 18px rgba(0,0,0,0.06);
+  margin-bottom: 22px;
+}
+
+.guide-badge {
+  display: inline-block;
+  font-size: 11px;
+  font-weight: 600;
+  color: #2563eb;
+  background: #e8f0ff;
+  padding: 4px 8px;
+  border-radius: 6px;
+  margin-bottom: 8px;
+}
+
+.guide-card h3 {
+  font-size: 18px;
+  margin: 8px 0 10px;
+}
+
+.guide-card ul {
+  padding-left: 18px;
+  margin: 12px 0 18px;
+}
+
+.guide-card li {
+  font-size: 14px;
+  margin-bottom: 6px;
+}
+
+.start-btn {
+  display: inline-block;
+  padding: 12px 22px;
+  background: #2563eb;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 8px;
+  font-weight: 600;
+  font-size: 14px;
+}
+
+.start-btn:hover {
+  background: #1e4fd8;
+}
+
+.disclosure {
+  font-size: 13px;
+  color: #666;
+  margin-top: 40px;
+}
+</style>
+</head>
+
+<body>
+
+<div class="guide-wrapper">
+
+<h1>Best Headphones for Work</h1>
+<div class="meta">Updated for 2026 · USA Buying Guide</div>
 
 <p>
-The right headphones can significantly improve your focus and comfort during work.
+The right headphones can significantly improve focus and comfort during work.
 Whether you’re working from home, attending virtual meetings, or spending long hours
 on calls, choosing the right pair matters.
 </p>
@@ -16,75 +128,78 @@ based on comfort, sound quality, noise cancellation, microphone performance,
 and long-term usability.
 </p>
 
-<div style="background:#f1f5ff;border-left:4px solid #2563eb;padding:14px 16px;margin:24px 0;border-radius:8px;font-size:14px;">
+<div class="tip-box">
 💡 <strong>Quick tip:</strong> For work, comfort and noise cancellation matter more than heavy bass.
 </div>
 
 <h2>Top Picks at a Glance</h2>
 
 <div class="guide-card">
-  <h3>1. Sony WH-1000XM Series – Best Overall</h3>
+  <span class="guide-badge">Best Overall</span>
+  <h3>Sony WH-1000XM Series</h3>
   <p>
-Sony’s WH-1000XM headphones offer industry-leading noise cancellation,
+Sony’s WH-1000XM headphones deliver industry-leading noise cancellation,
 excellent sound quality, and all-day comfort — ideal for focused work sessions.
-</p>
-<ul>
-  <li>✔ Best-in-class noise cancellation</li>
-  <li>✔ Comfortable for long hours</li>
-  <li>✔ Strong battery life</li>
-</ul>
-<a href="#" class="start-btn">Check price on Amazon</a>
+  </p>
+  <ul>
+    <li>✔ Best-in-class noise cancellation</li>
+    <li>✔ Comfortable for long hours</li>
+    <li>✔ Strong battery life</li>
+  </ul>
+  <a href="#" class="start-btn">Check price on Amazon</a>
 </div>
 
-<br>
-
 <div class="guide-card">
-  <h3>2. Bose QuietComfort Series – Best Comfort</h3>
+  <span class="guide-badge">Best Comfort</span>
+  <h3>Bose QuietComfort Series</h3>
   <p>
 Bose headphones are known for exceptional comfort and clear sound,
-making them perfect for meetings and extended use.
-</p>
-<ul>
-  <li>✔ Extremely lightweight and comfortable</li>
-  <li>✔ Clear voice pickup for calls</li>
-  <li>✔ Reliable noise reduction</li>
-</ul>
-<a href="#" class="start-btn">Check price on Amazon</a>
+making them ideal for meetings and extended daily use.
+  </p>
+  <ul>
+    <li>✔ Extremely lightweight and comfortable</li>
+    <li>✔ Clear voice pickup for calls</li>
+    <li>✔ Reliable noise reduction</li>
+  </ul>
+  <a href="#" class="start-btn">Check price on Amazon</a>
 </div>
 
-<br>
-
 <div class="guide-card">
-  <h3>3. Anker Soundcore – Best Budget</h3>
+  <span class="guide-badge">Best Budget</span>
+  <h3>Anker Soundcore Series</h3>
   <p>
-Anker’s Soundcore lineup offers impressive features at a lower price,
-ideal for professionals who want value without sacrificing quality.
-</p>
-<ul>
-  <li>✔ Excellent value for money</li>
-  <li>✔ Solid battery life</li>
-  <li>✔ Comfortable design</li>
-</ul>
-<a href="#" class="start-btn">Check price on Amazon</a>
+Anker’s Soundcore headphones offer impressive features at a lower price,
+making them a strong choice for professionals on a budget.
+  </p>
+  <ul>
+    <li>✔ Excellent value for money</li>
+    <li>✔ Solid battery life</li>
+    <li>✔ Comfortable design</li>
+  </ul>
+  <a href="#" class="start-btn">Check price on Amazon</a>
 </div>
 
 <h2>How to Choose the Right Headphones for Work</h2>
 
-<p>When selecting work headphones, focus on these essentials:</p>
+<p>When selecting headphones for work, focus on these essentials:</p>
 
 <ul>
   <li><strong>Comfort:</strong> Lightweight design and soft ear cushions</li>
-  <li><strong>Noise cancellation:</strong> Helps you stay focused</li>
+  <li><strong>Noise cancellation:</strong> Helps maintain focus</li>
   <li><strong>Microphone quality:</strong> Important for meetings and calls</li>
-  <li><strong>Battery life:</strong> At least 20–30 hours for wireless models</li>
+  <li><strong>Battery life:</strong> Aim for 20–30 hours on wireless models</li>
 </ul>
 
 <p>
 For most professionals, premium audio features aren’t as important as comfort,
-clarity, and reliability. A well-balanced pair will improve productivity
-without distractions.
+clarity, and reliability. A well-balanced pair can significantly improve productivity.
 </p>
 
-<p style="font-size:13px;color:#666;margin-top:30px;">
-Disclosure: Some links on this page may be affiliate links. This helps support our site at no extra cost to you.
+<p class="disclosure">
+Disclosure: Some links on this page may be affiliate links. We may earn a commission at no extra cost to you.
 </p>
+
+</div>
+
+</body>
+</html>
