--- a/best-smartphones-under-500.html
+++ b/best-smartphones-under-500.html
@@ -197,6 +197,25 @@
   </p>
 
 </div>
+  <h2 style="margin-top:50px;">Related Buying Guides</h2>
+
+<div class="guides-grid" style="margin-top:20px;">
+
+  <a class="guide-card" href="best-laptops-for-students.html">
+    <span class="guide-badge">Buying Guide</span>
+    <h3>Best Laptops for Students</h3>
+    <p>Reliable, affordable laptops for study.</p>
+    <span class="guide-cta">Read guide →</span>
+  </a>
+
+  <a class="guide-card" href="best-headphones-for-work.html">
+    <span class="guide-badge">Buying Guide</span>
+    <h3>Best Headphones for Work</h3>
+    <p>Comfortable & clear for long hours.</p>
+    <span class="guide-cta">Read guide →</span>
+  </a>
+
+</div>
 
 <footer>
   <p>
