--- a/best-smartphones-under-500.html
+++ b/best-smartphones-under-500.html
@@ -100,6 +100,18 @@
       color: #666;
       background: #fff;
     }
+    .related-guides {
+  margin-top: 40px;
+}
+
+.related-guides h2 {
+  text-align: center;
+}
+
+.related-guides .guides-grid {
+  max-width: 900px;
+  margin: 20px auto 0;
+}
   </style>
 </head>
 
@@ -178,6 +190,18 @@
 
     <a href="#" class="cta-btn">Check price on Amazon</a>
   </div>
+  <h2>Who This Guide Is For</h2>
+
+<p>
+This guide is ideal for buyers who want a reliable smartphone under $500 without
+overpaying for features they don’t need.
+</p>
+
+<ul>
+  <li>✔ Students and everyday users</li>
+  <li>✔ Professionals looking for value</li>
+  <li>✔ Anyone upgrading from an older phone</li>
+</ul>
 
   <h2>How to Choose the Right Phone</h2>
 
@@ -195,11 +219,10 @@
     For most users, spending extra on flagship features isn’t necessary.
     These phones handle daily tasks, apps, and media comfortably.
   </p>
+  <div class="related-guides">
+  <h2>Related Buying Guides</h2>
 
-</div>
-  <h2 style="margin-top:50px;">Related Buying Guides</h2>
-
-<div class="guides-grid" style="margin-top:20px;">
+  <div class="guides-grid">
 
   <a class="guide-card" href="best-laptops-for-students.html">
     <span class="guide-badge">Buying Guide</span>
@@ -214,6 +237,8 @@
     <p>Comfortable & clear for long hours.</p>
     <span class="guide-cta">Read guide →</span>
   </a>
+
+</div>
 
 </div>
 
