--- a/best-smartphones-under-500.html
+++ b/best-smartphones-under-500.html
@@ -176,6 +176,18 @@
     💡 <strong>Quick tip:</strong> If you don’t care about flagship cameras,
     you can save hundreds while still getting excellent performance.
   </div>
+  <h2>How We Picked These Smartphones</h2>
+
+<p>
+Our recommendations are based on hands-on research, verified user reviews,
+brand reliability in the US market, and long-term value — not sponsored rankings.
+</p>
+
+<ul>
+  <li>✔ Performance in daily real-world use</li>
+  <li>✔ Camera and battery reliability</li>
+  <li>✔ Software support and brand reputation</li>
+</ul>
 
   <h2>Top Picks at a Glance</h2>
 
