--- a/best-smartphones-under-500.html
+++ b/best-smartphones-under-500.html
@@ -78,6 +78,11 @@
       font-weight: 600;
       font-size: 14px;
     }
+    .price-note {
+  font-size: 12px;
+  color: #777;
+  margin-top: 6px;
+    }
 
     .cta-btn:hover {
       background: #1e4fd8;
@@ -206,6 +211,7 @@ brand reliability in the US market, and long-term value — not sponsored rankin
     </ul>
 
     <a href="#" class="cta-btn">Check price on Amazon</a>
+    <div class="price-note">Price may change · Check latest on Amazon</div>
   </div>
 
   <!-- PHONE 2 -->
