--- a/best-smartphones-under-500.html
+++ b/best-smartphones-under-500.html
@@ -229,6 +229,7 @@ brand reliability in the US market, and long-term value — not sponsored rankin
     </ul>
 
     <a href="#" class="cta-btn">Check price on Amazon</a>
+    <div class="price-note">Price may change · Check latest on Amazon</div>
   </div>
 
   <!-- PHONE 3 -->
@@ -246,6 +247,7 @@ brand reliability in the US market, and long-term value — not sponsored rankin
     </ul>
 
     <a href="#" class="cta-btn">Check price on Amazon</a>
+    <div class="price-note">Price may change · Check latest on Amazon</div>
   </div>
   <h2>Who This Guide Is For</h2>
 
