--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
   }
     }
     .featured-guides {
-  padding: 60px 20px 40px;
+  padding: 32px 20px;
   max-width: 1100px;
   margin: auto;
-}
+    }
 
 .featured-guides h2 {
   text-align: center;
@@ -203,7 +203,7 @@
   text-decoration: underline;
 }
     .categories {
-  padding: 40px 16px;
+  padding: 24px 16px;
   max-width: 1100px;
   margin: auto;
 }
@@ -213,6 +213,11 @@
   font-size: 22px;
   margin-bottom: 20px;
 }
+    @media (max-width: 600px) {
+  .categories h2 {
+    margin-bottom: 12px;
+  }
+    }
 
 .category-grid {
   display: grid;
