--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
   text-decoration: underline;
 }
     .categories {
-  padding: 24px 16px;
+  padding: 16px 16px 20px;
   max-width: 1100px;
   margin: auto;
 }
@@ -211,7 +211,7 @@
 .categories h2 {
   text-align: center;
   font-size: 22px;
-  margin-bottom: 20px;
+  margin-bottom: 12px;
 }
     @media (max-width: 600px) {
   .categories h2 {
@@ -228,7 +228,7 @@
 .category-card {
   background: #fff;
   border-radius: 12px;
-  padding: 18px 12px;
+  padding: 14px 10px;
   text-align: center;
   text-decoration: none;
   color: #111;
