--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
   grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
   gap: 16px;
   max-width: 900px;
-  margin: auto;
+  margin: 0 auto 20px;
 }
 
 .guide-card {
@@ -518,8 +518,8 @@
     </a>
   </div>
     </section>
-  <div class="section-divider"></div>
-  <section id="guides" style="padding:40px 20px;text-align:center;">
+  
+  <section id="guides" style="padding:24px 16px 12px;text-align:center;">
   <h2 style="font-size:24px;margin-bottom:8px;">
     Top Buying Guides
   </h2>
