--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 .categories h2 {
   text-align: center;
   font-size: 22px;
-  margin-bottom: 12px;
+  margin-bottom: 14px;
 }
     @media (max-width: 600px) {
   .categories h2 {
@@ -224,15 +224,22 @@
   grid-template-columns: repeat(2, 1fr);
   gap: 14px;
 }
-
-.category-card {
+    .category-card {
   background: #fff;
   border-radius: 12px;
-  padding: 14px 10px;
+  padding: 22px 14px;
+  min-height: 110px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
   text-align: center;
   text-decoration: none;
   color: #111;
   font-weight: 500;
+
   box-shadow: 0 6px 16px rgba(0,0,0,0.06);
   transition: transform 0.15s ease, box-shadow 0.15s ease;
 }
