--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 }
     .guide-img {
   width: 100%;
-  height: 140px;
+  height: 120px;
   object-fit: cover;
   border-radius: 10px;
   margin-bottom: 10px;
@@ -559,18 +559,21 @@
 </a>
 
   <a class="guide-card" href="best-laptops-for-students.html">
-    <span class="guide-badge">Buying Guide</span>
-    <h3>Best Laptops for Students</h3>
-    <p>Reliable, affordable laptops for study.</p>
-    <span class="guide-cta">Read guide →</span>
-  </a>
+  <img src="images/laptops-guide.jpg" alt="Best Laptops for Students" class="guide-img">
 
+  <span class="guide-badge">Buying Guide</span>
+  <h3>Best Laptops for Students</h3>
+  <p>Reliable, affordable laptops for study.</p>
+  <span class="guide-cta">Read guide →</span>
+</a>
   <a class="guide-card" href="best-headphones-for-work.html">
-    <span class="guide-badge">Buying Guide</span>
-    <h3>Best Headphones for Work</h3>
-    <p>Comfortable & clear for long hours.</p>
-    <span class="guide-cta">Read guide →</span>
-  </a>
+  <img src="images/headphones-guide.jpg" alt="Best Headphones for Work" class="guide-img">
+
+  <span class="guide-badge">Buying Guide</span>
+  <h3>Best Headphones for Work</h3>
+  <p>Comfortable & clear for long hours.</p>
+  <span class="guide-cta">Read guide →</span>
+</a>
 
 </div>
   
