--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
 <div class="guides-grid">
 
   <a class="guide-card" href="best-smartphones-under-500.html">
-  <img src="images/smartphones.jpg" alt="Best Smartphones Under $500" class="guide-img">
+  <img src="smartphones-guide.webp" alt="Best Smartphones Under $500" class="guide-img">
 
   
   <h3>Best Smartphones Under $500</h3>
@@ -550,7 +550,7 @@
 </a>
 
   <a class="guide-card" href="best-laptops-for-students.html">
-  <img src="images/laptops-guide.jpg" alt="Best Laptops for Students" class="guide-img">
+  <img src="laptops-guide.webp" alt="Best Laptops for Students" class="guide-img">
 
   
   <h3>Best Laptops for Students</h3>
@@ -558,7 +558,7 @@
   <span class="guide-cta">Read guide →</span>
 </a>
   <a class="guide-card" href="best-headphones-for-work.html">
-  <img src="images/headphones-guide.jpg" alt="Best Headphones for Work" class="guide-img">
+  <img src="headphones-guide.webp" alt="Best Headphones for Work" class="guide-img">
 
   
   <h3>Best Headphones for Work</h3>
