--- a/index.html
+++ b/index.html
@@ -235,11 +235,11 @@
   grid-template-columns: repeat(2, 1fr);
   gap: 14px;
 }
-    .category-card {
-  background: #fff;
-  border-radius: 12px;
-  padding: 22px 14px;
-  min-height: 110px;
+ .category-card {
+  background: #ffffff;
+  border-radius: 14px;
+  padding: 26px 16px;
+  min-height: 120px;
 
   display: flex;
   flex-direction: column;
@@ -251,8 +251,8 @@
   color: #111;
   font-weight: 500;
 
-  box-shadow: 0 6px 16px rgba(0,0,0,0.06);
-  transition: transform 0.15s ease, box-shadow 0.15s ease;
+  box-shadow: 0 10px 24px rgba(0, 0, 0, 0.06);
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
 .category-card .icon {
@@ -262,8 +262,8 @@
 }
 
 .category-card:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 10px 22px rgba(0,0,0,0.08);
+  transform: translateY(-4px);
+  box-shadow: 0 16px 34px rgba(0, 0, 0, 0.12);
 }
 
 /* Tablet & desktop */
