--- a/index.html
+++ b/index.html
@@ -260,6 +260,12 @@
   font-size: 26px;
   margin-bottom: 6px;
 }
+    .category-card img {
+  width: 56px;
+  height: 56px;
+  object-fit: contain;
+  margin-bottom: 10px;
+}
 
 .category-card:hover {
   transform: translateY(-4px);
