--- a/index.html
+++ b/index.html
@@ -503,34 +503,34 @@
 
   <div class="category-grid">
     <a href="#" class="category-card">
-      <span class="icon">📱</span>
-      <span>Smartphones</span>
-    </a>
+  <img src="images/smartphones-cat.webp" alt="Smartphones">
+  <span>Smartphones</span>
+</a>
 
     <a href="#" class="category-card">
-      <span class="icon">💻</span>
-      <span>Laptops</span>
-    </a>
+  <img src="images/laptops-cat.webp" alt="Laptops">
+  <span>Laptops</span>
+</a>
 
     <a href="#" class="category-card">
-      <span class="icon">🎧</span>
-      <span>Headphones</span>
-    </a>
+  <img src="images/headphones-cat.webp" alt="Headphones">
+  <span>Headphones</span>
+</a>
 
     <a href="#" class="category-card">
-      <span class="icon">🏠</span>
-      <span>Home & Living</span>
-    </a>
+  <img src="images/home-living-cat.webp" alt="Home and Living">
+  <span>Home & Living</span>
+</a>
 
     <a href="#" class="category-card">
-      <span class="icon">🛠️</span>
-      <span>Tools</span>
-    </a>
+  <img src="images/tools-cat.webp" alt="Tools">
+  <span>Tools</span>
+</a>
 
     <a href="#" class="category-card">
-      <span class="icon">📷</span>
-      <span>Cameras</span>
-    </a>
+  <img src="images/cameras-cat.webp" alt="Cameras">
+  <span>Cameras</span>
+</a>
   </div>
     </section>
   
