--- a/index.html
+++ b/index.html
@@ -254,6 +254,12 @@
   box-shadow: 0 10px 24px rgba(0, 0, 0, 0.06);
   transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
+    .category-card img {
+  width: 56px;
+  height: 56px;
+  object-fit: contain;
+  margin-bottom: 10px;
+    }
 
 .category-card .icon {
   display: block;
