--- a/index.html
+++ b/index.html
@@ -504,42 +504,34 @@
   <a href="#guides" class="hero-cta">Explore Top Buying Guides</a>
 </section>
   <div class="section-divider"></div>
-    <section class="categories">
+   <section class="categories">
   <h2>Popular Categories</h2>
 
-  <div class="category-grid">
-    <a href="#" class="category-card">
-  <img src="images/smartphones-cat.webp" alt="Smartphones">
-  <span>Smartphones</span>
-</a>
+  <div class="category-grid category-grid-3">
 
-    <a href="#" class="category-card">
-  <img src="images/laptops-cat.webp" alt="Laptops">
-  <span>Laptops</span>
-</a>
+    <a href="#" class="category-card category-banner">
+      <img src="assets/images/categories/tech-gadgets.webp" alt="Tech & Gadgets">
+      <div class="category-text">
+        <h3>Tech & Gadgets</h3>
+      </div>
+    </a>
 
-    <a href="#" class="category-card">
-  <img src="images/headphones-cat.webp" alt="Headphones">
-  <span>Headphones</span>
-</a>
+    <a href="#" class="category-card category-banner">
+      <img src="assets/images/categories/software-online-tools.webp" alt="Software & Online Tools">
+      <div class="category-text">
+        <h3>Software & Online Tools</h3>
+      </div>
+    </a>
 
-    <a href="#" class="category-card">
-  <img src="images/home-living-cat.webp" alt="Home and Living">
-  <span>Home & Living</span>
-</a>
+    <a href="#" class="category-card category-banner">
+      <img src="assets/images/categories/home-living.webp" alt="Home & Living">
+      <div class="category-text">
+        <h3>Home & Living</h3>
+      </div>
+    </a>
 
-    <a href="#" class="category-card">
-  <img src="images/tools-cat.webp" alt="Tools">
-  <span>Tools</span>
-</a>
-
-    <a href="#" class="category-card">
-  <img src="images/cameras-cat.webp" alt="Cameras">
-  <span>Cameras</span>
-</a>
   </div>
-    </section>
-  
+</section>
   <section id="guides" style="padding:24px 16px 12px;text-align:center;">
   <h2 style="font-size:24px;margin-bottom:8px;">
     Top Buying Guides
