--- a/index.html
+++ b/index.html
@@ -510,21 +510,21 @@
   <div class="category-grid category-grid-3">
 
     <a href="#" class="category-card category-banner">
-      <img src="assets/images/categories/tech-gadgets.webp" alt="Tech & Gadgets">
+      <img src="tech-gadgets.webp" alt="Tech & Gadgets">
       <div class="category-text">
         <h3>Tech & Gadgets</h3>
       </div>
     </a>
 
     <a href="#" class="category-card category-banner">
-      <img src="assets/images/categories/software-online-tools.webp" alt="Software & Online Tools">
+      <img src="software-online-tools.webp" alt="Software & Online Tools">
       <div class="category-text">
         <h3>Software & Online Tools</h3>
       </div>
     </a>
 
     <a href="#" class="category-card category-banner">
-      <img src="assets/images/categories/home-living.webp" alt="Home & Living">
+      <img src="home-living.webp" alt="Home & Living">
       <div class="category-text">
         <h3>Home & Living</h3>
       </div>
