--- a/index.html
+++ b/index.html
@@ -458,6 +458,66 @@
     font-size: 30px;
   }
 }
+    /* === Popular Categories === */
+
+.categories {
+  padding: 32px 16px;
+}
+
+.categories h2 {
+  text-align: center;
+  font-size: 26px;
+  margin-bottom: 24px;
+}
+
+.category-grid-3 {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 24px;
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
+.category-banner {
+  background: #fff;
+  border-radius: 16px;
+  overflow: hidden;
+  border: 1px solid #eee;
+  text-decoration: none;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.category-banner:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 24px rgba(0,0,0,0.08);
+}
+
+.category-banner img {
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+  display: block;
+}
+
+.category-text {
+  padding: 16px 18px;
+}
+
+.category-text h3 {
+  margin: 0;
+  font-size: 17px;
+  font-weight: 600;
+  color: #111;
+}
+    @media (max-width: 768px) {
+  .category-grid-3 {
+    grid-template-columns: 1fr;
+  }
+
+  .category-banner img {
+    height: 200px;
+  }
+}
   </style>
 </head>
 
