--- a/index.html
+++ b/index.html
@@ -518,6 +518,35 @@
     height: 200px;
   }
 }
+    /* Section spacing consistency */
+.categories {
+  padding: 48px 16px 40px;
+}
+
+#guides {
+  padding-top: 48px;
+}
+    .category-banner {
+  background: #ffffff;
+  border-radius: 16px;
+  border: 1px solid #eaeaea;
+}
+    .category-text h3 {
+  font-size: 17px;
+  font-weight: 600;
+  color: #0f172a;
+}
+    @media (hover: hover) {
+  .category-banner:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 12px 28px rgba(0, 0, 0, 0.08);
+  }
+}
+    @media (max-width: 768px) {
+  .category-text {
+    padding: 18px;
+  }
+}
   </style>
 </head>
 
