--- a/index.html
+++ b/index.html
@@ -547,6 +547,21 @@
     padding: 18px;
   }
 }
+    .hero {
+  padding-top: 72px;
+  padding-bottom: 72px;
+}
+    @media (min-width: 1024px) {
+  .hero {
+    padding-top: 64px;
+    padding-bottom: 64px;
+  }
+}
+    @media (min-width: 1024px) {
+  .categories {
+    margin-top: -24px;
+  }
+}
   </style>
 </head>
 
