--- a/index.html
+++ b/index.html
@@ -588,6 +588,11 @@
     margin-bottom: 16px;
   }
 }
+    @media (max-width: 768px) {
+  .hero {
+    padding-bottom: 56px; /* instead of 40px */
+  }
+}
   </style>
 </head>
 
