--- a/index.html
+++ b/index.html
@@ -387,6 +387,11 @@
     font-size: 30px;
   }
 }
+    .categories {
+  padding: 48px 16px 40px;
+  max-width: 1100px;
+  margin: 0 auto;
+    }
 
 .categories h2 {
   text-align: center;
