--- a/index.html
+++ b/index.html
@@ -503,6 +503,43 @@
     margin-bottom: 18px;
   }
 }
+    /* ===== DESKTOP NAV POLISH (STEP 1) ===== */
+.nav-desktop {
+  display: flex;
+  gap: 28px;
+  align-items: center;
+}
+
+.nav-desktop a {
+  position: relative;
+  font-size: 14.5px;
+  font-weight: 500;
+  color: #334155;
+  text-decoration: none;
+  padding: 6px 0;
+  transition: color 0.2s ease;
+}
+
+.nav-desktop a:hover {
+  color: #1e4fd8;
+}
+
+/* Active page */
+.nav-desktop a.active {
+  color: #1e4fd8;
+  font-weight: 600;
+}
+
+.nav-desktop a.active::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -8px;
+  width: 100%;
+  height: 2px;
+  background: #1e4fd8;
+  border-radius: 2px;
+}
    
   </style>
 </head>
@@ -519,10 +556,10 @@
 
     <!-- DESKTOP NAV -->
     <nav class="nav-desktop">
-      <a href="#">Home</a>
-      <a href="#">Reviews</a>
-      <a href="#">Guides</a>
-      <a href="#">About</a>
+  <a href="#" class="active">Home</a>
+  <a href="#">Reviews</a>
+  <a href="#">Guides</a>
+  <a href="#">About</a>
     </nav>
 
     <!-- MOBILE MENU ICON -->
