--- a/index.html
+++ b/index.html
@@ -517,9 +517,8 @@
   <img src="logo.png" alt="ChoiceMentor logo" class="logo-img">
     </div>
 
-    <!-- DESKTOP NAV -->
     <nav class="nav-desktop">
-  <a href="#" class="active">Home</a>
+  <a href="#">Home</a>
   <a href="#">Reviews</a>
   <a href="#">Guides</a>
   <a href="#">About</a>
