--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 /* ===== DESKTOP NAV ===== */
 .nav-desktop {
   display: flex;
-  gap: 20px;
+  gap: 26px;
 }
 
 .nav-desktop a {
@@ -502,6 +502,32 @@
     font-size: 15px;
     margin-bottom: 18px;
   }
+}
+    /* ===== DESKTOP HEADER POLISH ===== */
+.nav-desktop a {
+  position: relative;
+  padding: 6px 2px;
+  font-size: 14px;
+}
+
+.nav-desktop a:hover {
+  color: #2563eb;
+}
+
+.nav-desktop a.active {
+  color: #2563eb;
+  font-weight: 600;
+}
+
+.nav-desktop a.active::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -6px;
+  width: 100%;
+  height: 2px;
+  background: #2563eb;
+  border-radius: 2px;
 }
    
   </style>
