--- a/index.html
+++ b/index.html
@@ -529,6 +529,24 @@
   background: #2563eb;
   border-radius: 2px;
 }
+    /* ===== FOOTER MOBILE POLISH (PRO) ===== */
+@media (max-width: 600px) {
+
+  footer p {
+    font-size: 13px;
+    line-height: 1.5;
+  }
+
+  footer div a {
+    display: block;
+    margin: 10px 0;
+    font-size: 15px;
+  }
+
+  footer div {
+    padding-bottom: 8px;
+  }
+}
    
   </style>
 </head>
