--- a/index.html
+++ b/index.html
@@ -547,6 +547,39 @@
     padding-bottom: 8px;
   }
 }
+    .category-banner img {
+  height: 160px;        /* was 180–200 */
+  border-radius: 14px 14px 0 0;
+    }
+    .category-text {
+  padding: 12px 16px 16px;
+}
+
+.category-text h3 {
+  margin: 4px 0 0;
+  font-size: 16px;
+  font-weight: 600;
+}
+    .category-card {
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.category-card:active {
+  transform: scale(0.985);
+}
+    .category-banner {
+  border-radius: 16px;   /* keep */
+  box-shadow: 0 8px 20px rgba(0,0,0,0.06);
+    }
+    .category-card::after {
+  content: "→";
+  position: absolute;
+  bottom: 14px;
+  right: 16px;
+  font-size: 14px;
+  color: #94a3b8;
+    }
+    
    
   </style>
 </head>
