--- a/index.html
+++ b/index.html
@@ -441,14 +441,15 @@
   border: 1px solid #eaeaea;
 }
     .category-text h3 {
-  font-size: 17px;
+  font-size: 15.5px;
   font-weight: 600;
   color: #0f172a;
+  letter-spacing: 0.2px;
 }
     @media (hover: hover) {
-  .category-banner:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 12px 28px rgba(0, 0, 0, 0.08);
+  .category-card:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 10px 22px rgba(0,0,0,0.08);
   }
 }
     @media (max-width: 768px) {
@@ -548,17 +549,19 @@
   }
 }
     .category-banner img {
-  height: 160px;        /* was 180–200 */
+  height: 160px;        
   border-radius: 14px 14px 0 0;
     }
     .category-text {
-  padding: 12px 16px 16px;
+  padding: 10px 16px 14px;
+  text-align: center;
 }
 
 .category-text h3 {
-  margin: 4px 0 0;
+  margin: 6px 0 0;
   font-size: 16px;
   font-weight: 600;
+  color: #0f172a;
 }
     .category-card {
   transition: transform 0.2s ease, box-shadow 0.2s ease;
