--- a/index.html
+++ b/index.html
@@ -587,6 +587,16 @@
 .nav-desktop a:hover {
   color: #2563eb;
 }
+    /* ===== DESKTOP HEADER VERTICAL POLISH ===== */
+@media (min-width: 769px) {
+  .site-header {
+    padding: 6px 0;
+  }
+
+  .nav-desktop {
+    align-items: center;
+  }
+}
   </style>
 </head>
 
