--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 8px 16px;
+  padding: 6px 16px;
   max-width: 1100px;
   margin: auto;
 }
@@ -123,10 +123,10 @@
 }
 
 .logo-img {
-  height: 52px;          /* keep this */
+  height: 44px;         
   width: auto;
   display: block;
-  margin-left: -6px;     /* 👈 KEY FIX */
+  margin-left: -6px;    
 }
     @media (max-width: 768px) {
   .header-inner {
